--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "@types/node": "^16.18.34",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
+    "mobx": "^6.9.0",
+    "mobx-react": "^7.6.0",
+    "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
